# Protocol2USDM

./: .gitignore  AGENTS.md  BRANCH_COMMIT_MESSAGE.md  CHANGELOG.md  FILE_AUDIT.md  QUICK_REFERENCE.md  README.md  STEP1_soa_text.json  STEP2_soa_vision.json  STEP3_soa_vision_fixed.json  STEP4_soa_text_fixed.json  STEP5_soa_final.json  USDM_COVERAGE_STATUS.md  USDM_EXPANSION_PLAN.md  USER_GUIDE.md  analyze_soa_structure.py  check_groups.py  compare_runs.py  evs_client.py  extract_pdf_pages_as_images.py  find_soa_pages.py  generate_soa_entity_mapping.py  generate_soa_llm_prompt.py  json_utils.py  llm_config.yaml  llm_providers.py  llm_raw_output.txt  llm_raw_output_1.txt  llm_raw_output_2.txt  llm_raw_output_3.txt  llm_soa_prompt.txt  m11_mapping.py  main.py  main_v2.py  main_v3.py  optimization_results.json  p2u_constants.py  pyproject.toml  reconcile_soa_llm.py  requirements.txt  (+10 more)
.claude/: settings.local.json
archive/: ALEXION_FEEDBACK_ANALYSIS.md  CDISC_CORE_BUG_REPORT.md  EXECUTION_MODEL_FIXES.md  README.md
core/: __init__.py  cdisc_api_adapter.py  code_registry.py  code_verification.py  constants.py  core_compliance.py  epoch_reconciler.py  errors.py  evs_client.py  llm_client.py  logging_config.py  m11_mapping_config.py  m11_usdm_mapping.yaml  pdf_utils.py  procedure_codes.py  prompt_registry.py  provenance.py  terminology_codes.py  usdm_schema_loader.py  usdm_types.py  usdm_types_generated.py  validation.py
deprecated/: run_soa_pipeline.py  validate_usdm_json.py
docs/: ARCHITECTURE.md  CROSS_REFS_AND_FIGURES_SPEC.md  EXECUTION_MODEL_ARCHITECTURE.md  EXECUTION_MODEL_EXTENSIONS.md  EXECUTION_MODEL_FIXES.md  FULL_PROJECT_REVIEW.md  M11_ANALYSIS.md  M11_RENDERER_ARCHITECTURE.md  M11_USDM_ALIGNMENT.md  PROJECT_REVIEW.md  ROADMAP.md  SEMANTIC_EDITING_EXECUTION_PLAN.md  SEMANTIC_EDITING_SPEC.md  TIMELINE_REVIEW_GUIDE.md  UI_UX_REVIEW.md  WEB_UI_REVIEW.md  (+4 more)
(+4242 files in other folders)
